force-app/main/default/objects/Notification_Log__c/Notification_Log__c.object-meta.xml
<CustomObject>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>NL-{000000}</displayFormat>
        <label>Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>