force-app/main/default/objects/Notification_Log__c/fields/ContextRecordId__c.field-meta.xml
<CustomField>
    <fullName>ContextRecordId__c</fullName>
    <label>Context Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>