force-app/main/default/objects/Notification_Log__c/fields/ContextSObjectType__c.field-meta.xml
<CustomField>
    <fullName>ContextSObjectType__c</fullName>
    <label>Context SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>