force-app/main/default/objects/Notification_Log__c/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>Event Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>