force-app/main/default/objects/Notification_Log__c/fields/RecipientsCount__c.field-meta.xml
<CustomField>
    <fullName>RecipientsCount__c</fullName>
    <label>Recipients Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>