force-app/main/default/objects/Notification_Log__c/fields/ResolverTrace__c.field-meta.xml
<CustomField>
    <fullName>ResolverTrace__c</fullName>
    <label>Resolver Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>