force-app/main/default/objects/Notification_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>PartiallyFailed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Throttled</fullName>
            </value>
            <value>
                <fullName>SkippedNoRecipients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>